W/pfla/p2/logz/rushlogs.txt


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
UV Setup 1 with FastAPI$
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
--- Executing uv run main.py ---
error: Failed to spawn: `main.py`
  Caused by: No such file or directory (os error 2)


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
UV Setup 1 with FastAPI$
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
--- Executing uv run app.py ---
 * Serving Flask app 'app'
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on http://127.0.0.1:5000
[33mPress CTRL+C to quit[0m
127.0.0.1 - - [21/Apr/2026 05:23:28] "GET / HTTP/1.1" 200 -


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
UV Setup 1 with FastAPI$
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
--- Executing uv run app.py ---
 * Serving Flask app 'app'
 * Debug mode: on
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://10.0.2.12:5000
[33mPress CTRL+C to quit[0m
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 387-311-061
127.0.0.1 - - [21/Apr/2026 05:25:10] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [21/Apr/2026 05:29:42] "GET / HTTP/1.1" 200 -
 * Detected change in '/workspaces/mx-pfl-1/W/pfla/p2/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 387-311-061
127.0.0.1 - - [21/Apr/2026 05:29:58] "GET / HTTP/1.1" 200 -
 * Detected change in '/workspaces/mx-pfl-1/W/pfla/p2/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 387-311-061


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
UV Setup 1 with FastAPI$
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
--- Executing uv run app.py ---
 * Serving Flask app 'app'
 * Debug mode: on
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://10.0.2.12:5000
[33mPress CTRL+C to quit[0m
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 387-311-061
127.0.0.1 - - [21/Apr/2026 05:50:16] "GET / HTTP/1.1" 200 -


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
UV Setup 1 with FastAPI$
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
--- Executing uv run app.py ---
 * Serving Flask app 'app'
 * Debug mode: on
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://10.0.2.12:5000
[33mPress CTRL+C to quit[0m
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 387-311-061
127.0.0.1 - - [21/Apr/2026 06:01:32] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [21/Apr/2026 06:01:36] "GET /pusy HTTP/1.1" 200 -
127.0.0.1 - - [21/Apr/2026 06:01:51] "GET / HTTP/1.1" 200 -
 * Detected change in '/workspaces/mx-pfl-1/W/pfla/p2/app.py', reloading
 * Restarting with stat
  File "/workspaces/mx-pfl-1/W/pfla/p2/app.py", line 29
    if __name__ == '__main__':
    ^^
SyntaxError: invalid syntax


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
UV Setup 1 with FastAPI$
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
--- Executing uv run app.py ---
 * Serving Flask app 'app'
 * Debug mode: on
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://10.0.2.12:5000
[33mPress CTRL+C to quit[0m
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 387-311-061
127.0.0.1 - - [21/Apr/2026 06:13:52] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [21/Apr/2026 06:13:56] "[33mGET /greet HTTP/1.1[0m" 404 -
127.0.0.1 - - [21/Apr/2026 06:14:00] "[33mGET /greet/fuck HTTP/1.1[0m" 404 -
 * Detected change in '/workspaces/mx-pfl-1/W/pfla/p2/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 387-311-061
127.0.0.1 - - [21/Apr/2026 06:14:17] "[33mGET /greet/ HTTP/1.1[0m" 404 -
127.0.0.1 - - [21/Apr/2026 06:14:20] "GET /greet/panty HTTP/1.1" 200 -
127.0.0.1 - - [21/Apr/2026 06:16:54] "GET /greet/mike HTTP/1.1" 200 -
 * Detected change in '/workspaces/mx-pfl-1/W/pfla/p2/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 387-311-061
127.0.0.1 - - [21/Apr/2026 06:17:31] "GET /greet/mike HTTP/1.1" 200 -
 * Detected change in '/workspaces/mx-pfl-1/W/pfla/p2/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 387-311-061
 * Detected change in '/workspaces/mx-pfl-1/W/pfla/p2/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 387-311-061
 * Detected change in '/workspaces/mx-pfl-1/W/pfla/p2/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 387-311-061
 * Detected change in '/workspaces/mx-pfl-1/W/pfla/p2/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 387-311-061
127.0.0.1 - - [21/Apr/2026 06:19:54] "[33mGET /add/ HTTP/1.1[0m" 404 -
127.0.0.1 - - [21/Apr/2026 06:19:58] "GET /add/9/9 HTTP/1.1" 200 -
 * Detected change in '/workspaces/mx-pfl-1/W/pfla/p2/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 387-311-061
 * Detected change in '/workspaces/mx-pfl-1/W/pfla/p2/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 387-311-061
